--- a/css/styles.css
+++ b/css/styles.css
@@ -307,6 +307,7 @@ section {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    align-content: center;
     gap: 30px;
     flex-direction: column;
 }
