--- a/css/styles.css
+++ b/css/styles.css
@@ -135,14 +135,14 @@ main {
 }
 
 section {
-    padding: 40px 5%;
+    padding: 60px 5%;
 }
 
 .hero {
     color: var(--color-text-secondary);
     text-align: center;
     padding: 100px 20px 60px;
-    background: url(https://i.postimg.cc/DZJRx2ML/imagen-2025-01-27-114435957.png);
+    background: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url('https://i.postimg.cc/DZJRx2ML/imagen-2025-01-27-114435957.png');
     background-size: cover;
     background-position: center;
 }
@@ -151,7 +151,8 @@ section {
     padding: 20px 10px;
     border: 2px dotted var(--color-text-primary);
     border-radius: 12px;
-    backdrop-filter: blur(5px);
+    background: rgba(255, 255, 255, 0.15);
+    backdrop-filter: blur(10px);
     width: fit-content;
     margin: auto;
 }
@@ -186,7 +187,7 @@ section {
 }
 
 .hero-text h1 {
-    color: var(--color-text-primary);
+    color: var(--color-bg-secondary);
     font-size: 3rem;
     margin-bottom: 10px;
 }
@@ -194,11 +195,12 @@ section {
 .hero-text h2 {
     font-size: 1.8rem;
     margin-bottom: 20px;
-    color: var(--color-accent);
+    color: var(--color-bg-primary);
 }
 
 .hero-text p {
     font-size: 1.2rem;
+    color: var(--color-bg-primary);
     margin-bottom: 0px;
 }
 
@@ -230,8 +232,8 @@ section {
     position: absolute;
     top: 50%;
     left: 50%;
-    width: 120%;
-    height: 110%;
+    width: 140%;
+    height: 120%;
     transform: translate(-50%, -50%) scale(1);
     background-color: var(--color-accent);
     border-radius: 100px;
@@ -250,7 +252,6 @@ section {
     color: var(--color-accent);
     text-align: center;
     margin-bottom: 40px;
-    padding-top: 30px;
     position: relative;
 }
 
@@ -298,11 +299,31 @@ section {
     font-size: 1.5rem;
 }
 
+#about {
+    background: url("https://i.postimg.cc/vZCKcRBm/49f06e51-0cd0-467f-8133-440d9ccb2b24.jpg");
+    background-size: cover;
+    background-position: center;
+}
+
 #about p {
-    font-size: 1.1rem;
+    font-size: 1.4rem;
     max-width: 800px;
-    margin: 0 auto;
-    text-align: center;
+    margin: auto;
+    text-align: justify;
+    color: var(--color-black);
+    font-weight: 600;
+    line-height: 25px;
+    background: rgba(255, 255, 255, 0.2);
+    padding: 16px;
+    border: 1px solid #fff;
+    backdrop-filter: blur(3px);
+    border-radius: 12px;
+}
+
+#projects {
+    background: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url('https://static-cse.canva.com/blob/1429039/whiteboards-team-meetings-brainstorm-banner.jpg');
+    background-size: cover;
+    background-position: center;
 }
 
 .contact-info {
@@ -343,6 +364,65 @@ footer a {
 
 footer a:hover {
     text-decoration: underline;
+}
+
+.scroll {
+    position: relative;
+    display: flex;
+    margin: auto;
+    max-width: 800px;
+    overflow: hidden;
+    -webkit-mask-image: linear-gradient(90deg, transparent, #fff 20%, #fff 80%, transparent)
+}
+
+.scroll div {
+    white-space: nowrap;
+    animation: scroll var(--time) linear infinite;
+    animation-delay: calc(var(--time)*-1);
+
+}
+
+.scroll div:nth-child(2) {
+    animation: scroll2 var(--time) linear infinite;
+    animation-delay: calc(var(--time)/-2);
+}
+
+@keyframes scroll {
+    0% {
+        transform: translateX(100%);
+    }
+
+    100% {
+        transform: translateX(-100%);
+    }
+}
+
+@keyframes scroll2 {
+    0% {
+        transform: translateX(0);
+    }
+
+    100% {
+        transform: translateX(-200%);
+    }
+}
+
+.scroll div span {
+    display: inline-flex;
+    margin: 10px;
+    letter-spacing: 0.2em;
+    background: #333;
+    color: #fff;
+    padding: 5px 10px;
+    border-radius: 5px;
+    transition: 0.5s all ease;
+    font-weight: bold;
+}
+
+.scroll div span:hover {
+    background: #3fd2f9;
+    color: #333;
+    cursor: pointer;
 }
 
 @media (max-width: 768px) {
